# model/delivery_order.go
@@ -4,16 +4,16 @@ import "progas-wms-be/enum"
 
 type DeliveryOrder struct {
 	BaseModel
-	DONumber      string                    `gorm:"not null;type:varchar(50);uniqueIndex"`
-	CustomerId    string                    `gorm:"not null;type:varchar(36);index"`
-	Customer      Customer                  `gorm:"foreignKey:CustomerId"`
-	FleetId       string                    `gorm:"not null;type:varchar(36);index"`
-	FleetVehicle  FleetVehicle              `gorm:"foreignKey:FleetId"`
-	Status        enum.DeliveryOrderStatus  `gorm:"not null;type:varchar(30)"`
-	TotalWeightKg float64                   `gorm:"type:decimal(10,2);not null;default:0"`
-	CylinderQty   int                       `gorm:"not null;default:0"`
-	Notes         string                    `gorm:"type:varchar(255)"`
-	Details       []DeliveryOrderDetail     `gorm:"foreignKey:DeliveryOrderId"`
+	DONumber      string                   `gorm:"not null;type:varchar(50);uniqueIndex"`
+	CustomerId    string                   `gorm:"not null;type:varchar(36);index"`
+	Customer      Customer                 `gorm:"foreignKey:CustomerId"`
+	FleetId       string                   `gorm:"not null;type:varchar(36);index"`
+	FleetVehicle  FleetVehicle             `gorm:"foreignKey:FleetId"`
+	Status        enum.DeliveryOrderStatus `gorm:"not null;type:varchar(30)"`
+	TotalWeightKg float64                  `gorm:"type:decimal(10,2);not null;default:0"`
+	CylinderQty   int                      `gorm:"not null;default:0"`
+	Notes         string                   `gorm:"type:varchar(255)"`
+	Details       []DeliveryOrderDetail    `gorm:"foreignKey:DeliveryOrderId"`
 }
 
 type DeliveryOrderDetail struct {
@@ -22,5 +22,9 @@ type DeliveryOrderDetail struct {
 	CylinderId      string   `gorm:"not null;type:varchar(36);index"`
 	BarcodeSN       string   `gorm:"not null;type:varchar(50)"`
 	WeightKg        float64  `gorm:"type:decimal(8,2);not null;default:0"`
+	MasterItemId    string   `gorm:"not null;type:varchar(36);default:'';index"`
+	UnitPrice       float64  `gorm:"type:decimal(15,2);not null;default:0"`
+	PriceSource     string   `gorm:"not null;type:varchar(10);default:HNA"`
+	LineTotal       float64  `gorm:"type:decimal(15,2);not null;default:0"`
 	Cylinder        Cylinder `gorm:"foreignKey:CylinderId"`
 }
